--- a/pages/guide/packages.html
+++ b/pages/guide/packages.html
@@ -97,23 +97,24 @@
         <p>Dans cette section, je vous conseillerais quelques packages que je trouve utiles.</p>
         <ul>
           <li> <a href="https://atom.io/packages/script">Script</a>
-            <p>Qui premet d'executer vos scripts confortablement depuis l'éditeur.
-              Fonctionnant avec une très grande parti des languages de programmation.
+            <p>Qui permet d'exécuter vos scripts confortablement depuis l'éditeur.
+              Fonctionnant avec une très grande partie des langages de programmation.
             </p>
             <p><strong>
-              Attention! Il vous faut tout de même que la commande lié à l'execution de votre script </strong> (ex: python script.py) <strong> soit accessible comme <a href="https://fr.wikipedia.org/wiki/Variable_d%27environnement">Variable d'environnement</a> grace au <a href="https://fr.wikipedia.org/wiki/Path">PATH</a>.
-              </strong> Car tous ce que fait cette extensions est de lancer votre script dans un terminal.
+              Attention! Il vous faut tout de même que la commande liée à l'exécutercution de votre script </strong> (ex: python script.py) <strong> soit accessible comme <a href="https://fr.wikipedia.org/wiki/Variable_d%27environnement">variable d'environnement</a> grace au <a href="https://fr.wikipedia.org/wiki/Path">PATH</a>.
+              </strong> Car tous ce que fait cette extension est de lancer votre script dans un terminal.
              </p>
           </li>
           <li> <a href="https://atom.io/packages/browser-plus">BrowserPlus</a>
-            <p>Pour pouvoir travailler facilement sur ces projet web, avec notamment un raffraichisseur automatique de la page que l'on peut activer a souhait (icon d'eclaire)</p>
+            <p>Pour pouvoir travailler facilement sur ces projets web, avec notamment un rafraîchisseur
+             automatique de page que l'on peut activer a souhait (icon d'eclaire)</p>
           </li>
           <li> <a href="https://atom.io/packages/linter">Linter</a>
-            <p>Pour voir ses erreurs de synthaxe et autres s'afficher de maniere dynamique dans l'éditeur.</p>
+            <p>Pour voir ses erreurs de syntaxe et autres s'afficher de manière dynamique dans l'éditeur.</p>
           </li>
           <li> <a href="https://atom.io/packages/color-picker">Color Picker</a>
-            <p>Pour choisir une couleur de maniere simple et
-              avoir accès au differents codes de celles-ci (rgb, hexadecimal...)</p>
+            <p>Pour choisir une couleur de manière simple et
+              avoir accès aux différents codes de celles-ci (rgb, hexadecimal...)</p>
           </li>
           <li> <a href="https://atom.io/packages/teletype">Teletype</a>
             <p>Pour travailler à plusieurs sur un même fichier.</p>
@@ -124,8 +125,7 @@
 
           <li> <a href="https://atom.io/packages/autocomplete-plus">AutoComplete-plus</a>
             <p>
-              Qui permet d'ajouter manuelement des suggestions qui pourra vous proposer par la suite,
-            plutôt que de retapper 200 fois la meme chose.
+              Qui permet d'ajouter manuellement des suggestions que l'éditeur pourra vous proposer par la suite lors de la saisie.
           </p>
           </li>
 
@@ -138,7 +138,7 @@
           </li>
 
           <li> <a href="https://atom.io/packages/minimap">Minimap</a>
-            <p>Pour pouvoir naviguer sans s'y perdre lorsque l'on a en fasse de soit un script particulièrement long.</p>
+            <p>Pour pouvoir naviguer sans s'y perdre lorsque l'on a en face de soi un script particulièrement long.</p>
           </li>
         </ul>
       </section>
