--- a/pages/pourAllerPlusLoin.html
+++ b/pages/pourAllerPlusLoin.html
@@ -78,12 +78,12 @@
 
       <section id="complement">
         <h2>Liens utiles:</h2>
-        <p>Des informations complementaires sont disponibles sur la documentation du <a href="https://atom.io/docs">site officiel d'Atom</a>
-          ou sur le <a href="https://github.com/atom/atom"> Repository GitHub d'Atom</a> </p>
+        <p>Des informations complémentaires sont disponibles sur la documentation du <a href="https://atom.io/docs">site officiel d'Atom</a>
+          ou sur le <a href="https://github.com/atom/atom"> dépôt GitHub d'Atom</a> </p>
 
         <h3>Vidéos pour bien débuter avec Atom:</h3>
           <ul>
-            <li><a href="https://www.youtube.com/watch?v=kF02EIGI7P8">Premier pas avec Atom</a></li>
+            <li><a href="https://www.youtube.com/watch?v=kF02EIGI7P8">Premiers pas avec Atom</a></li>
             <li><a href="https://youtu.be/aiXNKHKWlmY">Conseil de packages</a></li>
           </ul>
       </section>
@@ -93,7 +93,7 @@
         <h3>Sources</h3>
         <ul>
           <li>
-            <a href="https://flight-manual.atom.io/">Manuel d'utilisation d'atom</a>
+            <a href="https://flight-manual.atom.io/">Manuel d'utilisation d'Atom</a>
           </li>
           <li>
             <a href="https://www.marknotes.fr/docs/docs/Development/Web/atom/Racourcis%20clavier.html">Raccourcis Clavier</a>
@@ -102,7 +102,7 @@
             <a href="https://fr.wikipedia.org/wiki/Atom_(%C3%A9diteur_de_texte)">Wikipedia</a>
           </li>
           <li>
-            <a href="https://www.youtube.com/watch?v=UYPgPyxwF28">Top 5 ajouts d'Atom</a>
+            <a href="https://www.youtube.com/watch?v=UYPgPyxwF28">Top 5 des ajouts d'Atom</a>
           </li>
         </ul>
       </section>
