--- a/index.html
+++ b/index.html
@@ -89,9 +89,14 @@
 
       <section id="problem">
         <h2>Problématique</h2>
-        <p>Ce site vise à présenter l'éditeur de texte de GitHub: Atom</p>
+        <p>Ce site vise à présenter l'éditeur de texte de GitHub: Atom.</p>
+        <aside class="">
 
+          <p> <a href="images/Pages.7z">Visuel du site</a> </p>
+        </aside>
       </section>
+
+
 
       <section id="presentation">
         <h2>Présentation</h2>
