--- a/pages/guide/installation.html
+++ b/pages/guide/installation.html
@@ -99,7 +99,7 @@
       <section id="config">
         <h2>Configuration</h2>
         <p>Les paramètres sont accessibles en appuyant simultanément sur les touches "Ctrl" et ",".
-          Il est également accessible depuis le menu du haut File > Settings pour Windows ou depuis Edit > Preferences pour Linux.</p>
+          Il est également accessible depuis le menu du haut, File > Settings pour Windows ou depuis Edit > Preferences pour Linux.</p>
 
         <p>Une fois arrivé sur cette fenêtre vous aurez des options qui s'afficheront devant vous.
           Je vais en souligner quelques une qui me semble intérêssant d'activer.</p>
