--- a/pages/makingOf/consignes.html
+++ b/pages/makingOf/consignes.html
@@ -101,7 +101,7 @@
           </ul>
         </li>
         <li>Vous placerez un logo dans une taille de 145 pixels de large par 52 pixels de haut dans l'en-tête du site à côté du titre.</li>
-        <li>Le site contiendra un (seul) fichier pdf regroupant les captures d'écran de toutes vos pages, il sera placé en pièce jointe. </li>
+        <li>Le site contiendra un (seul) <a href="#">fichier pdf</a> regroupant les captures d'écran de toutes vos pages, il sera placé en pièce jointe. </li>
         <li>La page C contiendra une rubrique « making of » contenant:
           <ul>
             <li>Plusieurs captures d'écran issues de Google Analytics et présentant des statistiquesrelatives à votre site,
