--- a/pages/makingOf/googleAnalitics.html
+++ b/pages/makingOf/googleAnalitics.html
@@ -74,7 +74,7 @@
     </nav>
 
     <main class="content">
-
+      <p><a href="../../images/GoogleAnalytics.7z">Captures d'écran de Google Analytics</a></p>
       <nav id="nav-bottom">
         <a href="consignes.html"><i class="fas fa-chevron-left"></i></a>
         <a class="max" href="#"><i class="fas fa-chevron-right"></i></a>
