piace jointes pdf

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
       <section id="problem">
         <h2>Problématique</h2>
         <p>Ce site vise à présenter l'éditeur de texte de GitHub: Atom.</p>
-        <aside class="">
+        <aside id="pdf">
 
-          <p> <a href="images/Pages.7z">Visuel du site</a> </p>
+          <a href="images/pages.pdf">Visuel du site (pdf)</a> 
         </aside>
       </section>
 
