--- a/pages/makingOf/consignes.html
+++ b/pages/makingOf/consignes.html
@@ -101,10 +101,10 @@
           </ul>
         </li>
         <li>Vous placerez un logo dans une taille de 145 pixels de large par 52 pixels de haut dans l'en-tête du site à côté du titre.</li>
-        <li>Le site contiendra un (seul) <a href="#">fichier pdf</a> regroupant les captures d'écran de toutes vos pages, il sera placé en pièce jointe. </li>
+        <li>Le site contiendra un (seul) <a href="../../index.html#pdf">fichier pdf</a> regroupant les captures d'écran de toutes vos pages, il sera placé en pièce jointe. </li>
         <li>La page C contiendra une rubrique « making of » contenant:
           <ul>
-            <li>Plusieurs captures d'écran issues de Google Analytics et présentant des statistiquesrelatives à votre site,
+            <li> <a href="googleAnalitics.html#screenshot">Plusieurs captures d'écran issues de Google Analytics</a> et présentant des statistiques relatives à votre site,
               seront placées dans un fichier zippé placé en pièce jointe.
               Ces images doivent permettre d'identifier votre site (URL visible par exemple)
             </li>
