--- a/pages/pourAllerPlusLoin.html
+++ b/pages/pourAllerPlusLoin.html
@@ -117,7 +117,7 @@
       </section>
 
       <footer>
-        <p>Ce site a été réalisé avec soin par Florian Auberval.</p>
+        <p>Ce site a été réalisé avec soin par <strong>Florian Auberval</strong>.</p>
       </footer>
 
     </main>
