ajout du lien de la video

--- a/pages/makingOf/consignes.html
+++ b/pages/makingOf/consignes.html
@@ -112,7 +112,7 @@
               un lien vers l'efroit contenant les sources utilisées, ...)
             </li>
             <li>Optionnel hors barème:
-            Vous placerez une vidéo ouvrable sur votre site mais hébergée sur youtube montrant un screencast vous montrant en train de zipper les 3 copies d'écran
+            Vous placerez une <a href="https://www.youtube.com/watch?v=Wi9QfzTPRpM&feature=youtu.be">vidéo ouvrable sur votre site mais hébergée sur youtube</a> montrant un screencast vous montrant en train de zipper les 3 copies d'écran
           que vous déposez sur votre site. Pour faire des screencasts, vous pouvez utiliser CamStudio sous Windows ou gtk-recordmydesktop sous linux.
           Un accompagnement audio n'est pas interdit.</li>
           </ul>
