--- a/pages/makingOf/googleAnalitics.html
+++ b/pages/makingOf/googleAnalitics.html
@@ -75,7 +75,7 @@
 
     <main class="content">
       <aside id="screenshot">
-        <a href="../../images/GoogleAnalytics.7z">Captures d'écran de Google Analytics</a>
+        <a href="../../images/GoogleAnalytics.zip">Captures d'écran de Google Analytics</a>
       </aside>
       <nav id="nav-bottom">
         <a href="consignes.html"><i class="fas fa-chevron-left"></i></a>
