--- a/pages/guide/utilisation.html
+++ b/pages/guide/utilisation.html
@@ -114,7 +114,7 @@
             <p>Pour rechercher rapidement un fichier dans le/les dossier(s) ouverts.</p>
           </li>
 
-          <li>Mettre en commentaire: "Ctrl"+"/"(celui du pavé numérique)
+          <li>Mettre en commentaire: <strong>"Ctrl" + "/" </strong> (celui du pavé numérique)
             <p>Permet de mettre ou de retirer en commentaire la ligne ou toute la sélection.</p>
           </li>
 
@@ -189,7 +189,7 @@
           Et même fusionner des branches entre elles.
 
         </p>
-        
+
         <aside>
         <h3>Pourquoi me diriez-vous?</h3>
           <p>
