--- a/pages/guide/utilisation.html
+++ b/pages/guide/utilisation.html
@@ -92,7 +92,7 @@
           dans File > Reopen Project.
         </p>
 
-        <h3>Raccourcis</h3>
+        <h3>Les raccourcis</h3>
         <p>Lorsque l'on se met à se servir sérieusement d'un logiciel,
           il est toujours bon de connaitre quelques-uns de ses raccourcis fonctionnels
           pour améliorer sa productivité. C'est pourquoi dans cette section, nous traiterons quelques raccourcis de base qui pourrait
